syntax = "proto3";

option go_package = "github.com/kwul0208/common/api";

package api;

message Product{
   string ID = 1;
   string Name = 2;
   string Description = 3;
}

service ProductService{
    rpc CreateProduct(CreateProductRequest) returns (Product);
}

message ProductOnly{
    string ProductName = 2;
    string ProductDescription = 3;
}

message CreateProductRequest{
    ProductOnly productOnly = 1;
}

